--- a/package.json
+++ b/package.json
@@ -27,12 +27,9 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.0",
     "react-router-redux": "^5.0.0-alpha.6",
-    "react-scroll": "^1.5.4",
-    "react-spinners": "0.0.30",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "shortid": "^2.2.14",
-    "url-join": "^4.0.0"
+    "shortid": "^2.2.14"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -40,19 +37,20 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.7",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.3",
-    "redux-devtools-extension": "^2.13.2",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^1.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.10.0",
+    "redux-devtools-extension": "^2.13.7",
     "redux-logger": "^3.0.6",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.17.0",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^2.4.1",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-merge": "^4.1.0"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.5.0",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   },
   "eslintConfig": {
     "extends": "airbnb",
