--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
-    "d3": "^5.1.0",
+    "d3-interpolate": "^1.3.2",
     "history": "^4.7.2",
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
