--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 numpy==1.16.2
-spacy==2.0.16
+spacy==2.0.12
 tensorflow==1.13.1
 tensorflow-probability==0.6.0
+tensorflow-hub==0.7.0
+regex==2018.07.11
 tqdm==4.31.1
+flask==2.0.3
